Mobile View changes and Desktop view alignment fixes

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,11 +1,13 @@
 .main-navbar{
     position:fixed;
-    top: 0%; width: 95%;
+    top: 0; 
+    width: 100%;
 }
 .navbar {
     display: flex;
     justify-content: space-between;
-   
+    align-items: center;
+    background: #000;   
 }
 
 ul {
@@ -15,12 +17,16 @@ ul {
     padding: 0;
     margin: 0;
 }
-.navlinks{
+/* .navlinks{
     margin-top: 1%;
+} */
+
+.navlinks {
+    margin-right: 20px;
 }
 
 ul li {
-    height:50px;
+    /* height:50px; */
     padding:  15px;
 }
 a {
